Proyecto funcionando en java 7